Adding Parser part

--- a/presentation/style.css
+++ b/presentation/style.css
@@ -113,6 +113,11 @@ a {
 	border-radius: 5px;
 }
 
+.tweet-regex img {
+	width: 500px;
+	border-radius: 5px;
+}
+
 body {
 	font-family: arial, sans-serif;
 	font-weight: 400;
