--- a/presentation/style.css
+++ b/presentation/style.css
@@ -18,19 +18,7 @@ code {
 	-web-border-radius: 5px;
 	border-radius: 5px;
 }
-/*
-pre code .keyword {
-  color: #458 !important;
-}
 
-pre code .title {
-  color: #5471b7 !important;
-}
-
-pre code .params {
-  color: #000000 !important;
-}
-*/
 code {
   font-weight: bold;
 }
@@ -117,13 +105,19 @@ a {
   width: 800px;
 }
 
+.questions {
+  font-size: 1.4em;
+  display: block;
+  margin-top: 50px;
+}
+
 body {
 	font-family: arial, sans-serif;
 	font-weight: 400;
 }
 
 ul {
-	margin-bottom: 1.3em;
+  margin: 0.2em 0em 0.2em 0.3em; 
 }
 
 h1,h2,h3 {
@@ -132,7 +126,7 @@ h1,h2,h3 {
 	margin: 5px 0px;
 }
 
-h1,h2 {
+h1 {
 	color: rgb(255, 255, 255);
 	background-color: rgb(76, 102, 164);
 	border-radius: 10px;
@@ -143,12 +137,13 @@ h1 {
 	font-size: 2.5em;
 }
 
-h2 {
-	font-size: 1.8em;
+.remark-slide-content h2 {
+	font-size: 1.2em;
+  margin-bottom: 20px;
 }
 
-h3 {
-	font-size: 1.6em;
+.remark-slide-content h3 {
+	font-size: 1.0em;
 }
 
 
@@ -187,29 +182,4 @@ blockquote cite {
 
 blockquote cite:before {
 	content: "\2014 \2009";
-}
-
-/* Two-column layout */
-.left-column {
-	width: 50%;
-	float: left;
-}
-
-.right-column {
-	width: 50%;
-	float: right;
-}
-
-.inverse {
-	background: #A60A17;
-}
-
-/* slides */
-.bg-red {
-	background: #A60A17;
-}
-
-.bg-dark {
-	color: white;
-	text-shadow: 0 0 20px #333;
 }
